fixing search bar

--- a/home.html
+++ b/home.html
@@ -72,11 +72,12 @@
             <div class="jumbotron jumbotron-fluid background">
                 <div class="container">
                     <h1 class="display-3 text-center " id='logoFont'>
-                        <font color="#00cdcd">TESTING CAROUSEL </font>
+                        <font color="#00cdcd">Zank Site </font>
                     </h1>
                     <p class="lead text-center">
+                        <input type="text" placeholder="Search Building Codes">
+                        <a class="btn btn-info" href="results.html" role="button">Search Now!</a>
                         <font color="#00cdcd">
-                        SEARCH BAR GOES HERE
                         </font>
                     </p>
                 </div>
@@ -87,8 +88,8 @@
                     <div class="container" style="display: flex">
                         <div class="jumbotron text-center col">
                             <h1>What will you search for?</h1>
-                            <p>Results to display .</p>
-                            <a class="btn btn-info" href="results.html" role="button">Search Now!</a>
+                            <p></p>
+
                         </div>
                     </div>
                 </div>
