adding bootstrap to html files

--- a/home.html
+++ b/home.html
@@ -14,7 +14,6 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
-  <!-- Theme CSS -->
   <link href="css/freelancer.min.css" rel="stylesheet">
 
 </head>
@@ -55,7 +54,7 @@
       <!-- Masthead Heading -->
       <h1 class="masthead-heading text-uppercase mb-0">Searching For..</h1>
       <input class="form-control" id="name" type="text" placeholder="Search Building Codes" required="required">
-      <a class="btn btn-xl btn-outline-light" href="results.html" role="button">Search Now!</a>
+      <a class="btn btn-xl btn-outline-light" href="templates/results.html" role="button">Search Now!</a>
 
       <!-- Icon Divider -->
       <div class="divider-custom divider-light">
