--- a/home.html
+++ b/home.html
@@ -187,10 +187,11 @@
       <!-- About Section Content -->
       <div class="row">
         <div class="col-lg-4 ml-auto">
-          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipisicing elit Ut enim ad minim veniam, quis nostrud </p>
+          <h3>What is Zank?</h3>
+          <p class="lead">Zank is you're one stop shop for all things building codes. Search for cities and find their corresponding ICC Regulations. </p>
         </div>
         <div class="col-lg-4 mr-auto">
-          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit Ut enim ad minim veniam, quis nostrud exercitation ullamco.Lorem ipsum dolor sit amet.</p>
+          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit Ut enim ad minim veniam, quis nostrud exercit.Lorem ipsum dolor sit amet, consectetur adipisic, quis nostrud exercit ipsum dolor sit amet.</p>
         </div>
       </div>
 
