--- a/home.html
+++ b/home.html
@@ -7,7 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-
   <title>Zank Site</title>
   <!-- Custom fonts for this theme -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -64,9 +63,6 @@
         </div>
         <div class="divider-custom-line"></div>
       </div>
-
-      <!-- Masthead Subheading
-      <p class="masthead-subheading font-weight-light mb-0">Graphic Artist - Web Designer - Illustrator</p> -->
 
     </div>
   </header>
@@ -173,7 +169,7 @@
     <div class="container">
 
       <!-- About Section Heading -->
-      <h2 class="page-section-heading text-center text-uppercase text-white">About</h2>
+      <h2 class="page-section-heading text-center text-uppercase text-white">About- Create About P-Heading .</h2>
 
       <!-- Icon Divider -->
       <div class="divider-custom divider-light">
@@ -191,7 +187,7 @@
           <p class="lead">Zank is you're one stop shop for all things building codes. Search for cities and find their corresponding ICC Regulations. </p>
         </div>
         <div class="col-lg-4 mr-auto">
-          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit Ut enim ad minim veniam, quis nostrud exercit.Lorem ipsum dolor sit amet, consectetur adipisic, quis nostrud exercit ipsum dolor sit amet.</p>
+          <p class="lead">Create search queries to find information on building information.The dynamic search bar </p>
         </div>
       </div>
 
@@ -206,7 +202,6 @@
   <section class="page-section" id="contact">
     <div class="container">
 
-      <!-- Contact Section Heading -->
       <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Contact Me</h2>
 
       <!-- Icon Divider -->
@@ -218,10 +213,10 @@
         <div class="divider-custom-line"></div>
       </div>
 
-      <!-- Contact Section Form -->
+      <!-- Contact Form -->
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
+          <!--  Email address, password, finish contact form. -->
           <form name="sentMessage" id="contactForm" novalidate="novalidate">
             <div class="control-group">
               <div class="form-group floating-label-form-group controls mb-0 pb-2">
