--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
-  <link href="zank/static/css/freelancer.css" rel="stylesheet">
+  <link href="css/freelancer.min.css" rel="stylesheet">
 
 </head>
 
@@ -557,14 +557,14 @@
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   <!-- Plugin JavaScript -->
-  <script src="zank/static/vendor/jquery-easing/jquery.easing.min.js"></script>
+  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
   <!-- Contact Form JavaScript -->
-  <script src="zank/static/js/jqBootstrapValidation.js"></script>
-  <script src="zank/static/js/contact_me.js"></script>
+  <script src="js/jqBootstrapValidation.js"></script>
+  <script src="js/contact_me.js"></script>
 
   <!-- Custom scripts for this template -->
-  <script src="zank/static/js/freelancer.min.js"></script>
+  <script src="js/freelancer.min.js"></script>
 
 </body>
 
