--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
       <img class="masthead-avatar mb-5" src="img/zank.png" alt="">
 
       <!-- Header Text-->
-      <h1 class="masthead-heading text-uppercase mb-0">Searching On Zank</h1>
+      <h1 class="masthead-heading text-uppercase mb-0">Search Building Codes</h1>
       <input class="form-control" id="name" type="text" placeholder="Search Building Codes" required="required">
       <a class="btn btn-xl btn-outline-light" href="templates/results.html" role="button">Search Now!</a>
 
@@ -51,7 +51,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/cabin.png" alt="">
+            <img class="img-fluid" src="img/portfolio/pic6.png" alt="">
           </div>
         </div>
 
@@ -63,7 +63,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/cake.png" alt="">
+            <img class="img-fluid" src="img/portfolio/pic7.png" alt="">
           </div>
         </div>
 
@@ -75,7 +75,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/circus.png" alt="">
+            <img class="img-fluid" src="img/portfolio/pic2.png" alt="">
           </div>
         </div>
 
@@ -87,7 +87,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/game.png" alt="">
+            <img class="img-fluid" src="img/portfolio/pic3.png" alt="">
           </div>
         </div>
 
@@ -99,7 +99,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/safe.png" alt="">
+            <img class="img-fluid" src="img/portfolio/pic4.png" alt="">
           </div>
         </div>
 
@@ -111,7 +111,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/submarine.png" alt="">
+            <img class="img-fluid" src="img/portfolio/pic5.png" alt="">
           </div>
         </div>
 
@@ -123,10 +123,10 @@
   <section class="page-section bg-primary text-white mb-0" id="about">
     <div class="container">
 
-      <!-- About Section Heading -->
+      <!-- About Heading -->
       <h2 class="page-section-heading text-center text-uppercase text-white">About</h2>
 
-      <!-- Icon Divider -->
+      <!-- Dividers -->
       <div class="divider-custom divider-light">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
@@ -135,7 +135,7 @@
         <div class="divider-custom-line"></div>
       </div>
 
-      <!-- About Section Content -->
+      <!-- About Section -->
       <div class="row">
         <div class="col-lg-4 ml-auto">
           <h3>What is Zank?</h3>
