fixing image html

--- a/home.html
+++ b/home.html
@@ -8,6 +8,7 @@
     <meta name="author" content="">
 
     <title>Zank</title>
+
     <!-- Custom Fonts -->
     <link href="{% static 'vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
@@ -55,7 +56,7 @@
   <!-- Header Image -->
   <header class="masthead bg-primary text-white text-center">
     <div class="container d-flex align-items-center flex-column">
-      <img class="masthead-avatar mb-5" src="img/{{zank.png}}" alt="">
+      <img src="{{url_for('img', filename='zank.png')}}"/>
 
       <!-- Header Text-->
       <h1 class="masthead-heading text-uppercase mb-0">Search Building Codes</h1>
