fixing grammar errors

--- a/home.html
+++ b/home.html
@@ -201,7 +201,7 @@
           <p class="lead">Zank is you're one stop shop for all things building codes. Search for cities and find their corresponding ICC Regulations. </p>
         </div>
         <div class="col-lg-4 mr-auto">
-          <p class="lead">Create search queries to find information on building information. Get all the info you need--! </p>
+          <p class="lead">Create search queries to find information on building codes. Get all the info you need on Zank! </p>
         </div>
       </div>
 
@@ -351,7 +351,7 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="img/portfolio/constructionImg4.png" alt="">
+                <img class="img-fluid rounded mb-5" src="{% static 'img/portfolio/submarine.png' %}" alt="">
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">Construction Site Image</p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
